force-app/src/objects/OrderApi__Order_Summary__c.object
<CustomObject>
    <description>This object holds the information related to order summaries generated.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</description>
        <inlineHelpText>Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Address_To__c</fullName>
        <description>Prepopulated with the Contact&apos;s or Account&apos;s Mailing/Billing Address.</description>
        <inlineHelpText>Prepopulated with the Contact&apos;s or Account&apos;s Mailing/Billing Address.</inlineHelpText>
        <label>Address To</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>This field defines the date the order summary was run.</description>
        <inlineHelpText>This field defines the date the order summary was run.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Encrypted_Id__c</fullName>
        <description>This field shows this record&apos;s encrypted id used for external pages.</description>
        <inlineHelpText>This field shows this record&apos;s encrypted id used for external pages.</inlineHelpText>
        <label>Encrypted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>Select &quot;Account&quot; if the related the account is responsible payment of the customer order, Select &quot;Contact&quot; if the related contact is responsible payment of the customer order.</description>
        <inlineHelpText>Select &quot;Account&quot; if the related the account is responsible payment of the customer order, Select &quot;Contact&quot; if the related contact is responsible payment of the customer order.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Filter_Criteria__c</fullName>
        <description>This field defines the filter used to create the order summary.</description>
        <inlineHelpText>This field defines the filter used to create the order summary.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>This field is displayed on the order summary document.</description>
        <inlineHelpText>This field is displayed on the order summary document.</inlineHelpText>
        <label>Memo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Order_Summary_URL__c</fullName>
        <description>This field define the URL that shows the order summary.</description>
        <inlineHelpText>This field define the URL that shows the order summary.</inlineHelpText>
        <label>Order Summary URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__PDF_URL__c</fullName>
        <description>This field define the URL that shows the PDF version of the statement.</description>
        <inlineHelpText>This field define the URL that shows the PDF version of the statement.</inlineHelpText>
        <label>PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OrderApi__Show_Outstanding_Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows staff users to show the outstanding credits a customer has with the organization.</description>
        <inlineHelpText>This field allows staff users to show the outstanding credits a customer has with the organization.</inlineHelpText>
        <label>Show Outstanding Credits</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Summary</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>